--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,16 @@
   display: flex;
   flex-direction: row;
 }
+
+.infosRate{
+  padding-right: 10px;
+}
+
+.navbar{
+  position: fixed;
+  width: 100%;
+}
+
+.container{
+  margin-top: 35px;
+}
