--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,11 @@
   flex-direction: row;
 }
 
+.liked>a{
+  display: flex;
+  justify-content: space-around;
+}
+
 .infosRate{
   padding-right: 10px;
 }
@@ -88,4 +93,48 @@
 
 .container{
   margin-top: 35px;
+}
+
+.area{
+  width: 80%;
+  margin-left: 10%;
+  max-height: 200px;
+  min-width: 80%;
+  max-width: 80%;
+  min-height: 100px;
+}
+
+.addpost{
+  padding: 25px;
+  flex-direction: row;
+}
+
+.add{
+  display: flex;
+  flex-direction: column;
+}
+
+.select{
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+}
+
+.select>select{
+  width: 100%;
+}
+
+.add_bottom{
+  display: flex;
+  margin-left: 10%;
+  width: 80%;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+.add_top{
+  text-align: center;
+  font-weight: bold;
 }
