--- a/src/index.scss
+++ b/src/index.scss
@@ -148,13 +148,19 @@
 }
 
 .addpost{
-  padding: 25px;
+  padding: 0px 0px 25px 25px;
   flex-direction: row;
+  width: 100%;
 }
 
 .add{
   display: flex;
   flex-direction: column;
+}
+
+.modal-card-foot{
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
 }
 
 .select{
