--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -134,6 +134,7 @@ body{
 
 .infosRate {
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 .navbar {
@@ -171,7 +172,7 @@ body{
 }
 
 .select {
-  width: 20%;
+  width: auto;
   display: flex;
   flex-direction: row;
 }
@@ -233,4 +234,10 @@ body{
 
 .textarea {
   width: 100%;
+}
+
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
