--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,13 @@
 body{
-  background-color: #feeefc !important;
-  min-height: 100%;
+  background-color: #E2EDFF !important;
+}
+
+html {
+  height: 100%;
+  background-color: #E2EDFF !important;
+}
+body {
+  height: 100%;
 }
 
 .loader-wrapper {
