--- a/src/css/post.scss
+++ b/src/css/post.scss
@@ -64,6 +64,13 @@
     justify-content: space-between;
     align-items: center;
 }
+.imgPostContent{
+  image-orientation: from-image;
+}
+.imgPost{
+  text-align: center;
+  margin: auto;
+}
 
 .commentRate {
   border-radius: 0px 0px 5px 5px;
