Post and comment remove by user

--- a/src/css/post.scss
+++ b/src/css/post.scss
@@ -98,3 +98,12 @@
 .star {
   color: yellow;
 }
+
+.btDelete{
+  width: 100%;
+  text-align: end;
+}
+
+.btDelete>button,.btDelete>button:hover {
+  background-color: red;
+}
