--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -257,3 +257,19 @@ body {
 .white,.subtitle strong{
   color: whitesmoke !important;
 }
+
+.fb{
+  color: #3b5998 !important;
+}
+
+.twitter{
+  color: #55acee !important;
+}
+
+.insta {
+  color:  radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%) !important;
+}
+
+.padding{
+  padding: 5px;
+}
