Add forget form

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -106,6 +106,12 @@ body {
   width: 100%;
 }
 
+.spacearound{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
 .cercle {
   width: 20px;
   height: 20px;
